connect button text alignment fix

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -34,7 +34,7 @@
   text-decoration: none;
 }
 
-.navTextActive{
+.navTextActive {
   color: rgba(240, 248, 255, 0.85);
   /* color: rgba(240, 248, 255, 0.587); */
   /* text-decoration: underline; */
@@ -54,6 +54,9 @@
   border: none;
   background: linear-gradient(45deg, #3c51ae, #30b9ed) 0;
   border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .connectButton:hover {
